--- a/cv/index.html
+++ b/cv/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="mathilde por&#xe9;e,artiste,photographie,dessin,cv,actualit&#xe9;s,plasticienne,jeune artiste,beaux arts,quimper,expositions,cherbourg">
     <meta property="og:title" content="Mathilde Por&#xe9;e">
     <meta property="og:type" content="author">
-    <meta property="og:url" content="http://www.mathildeporee.fr/">
-    <meta property="og:image" content="http://www.mathildeporee.fr/images/volatile.jpg">
+    <meta property="og:url" content="https://www.mathildeporee.fr/">
+    <meta property="og:image" content="https://www.mathildeporee.fr/images/volatile.jpg">
     <meta property="og:site_name" content="Mathilde Por&#xe9;e">
     <title>Mathilde Porée &mdash; CV</title>
     <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" />
