--- a/installation/index.html
+++ b/installation/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="mathilde por&#xe9;e,artiste,photographie,dessin,cv,actualit&#xe9;s,plasticienne,jeune artiste,beaux arts,quimper,expositions,cherbourg">
     <meta property="og:title" content="Mathilde Por&#xe9;e">
     <meta property="og:type" content="author">
-    <meta property="og:url" content="http://www.mathildeporee.fr/">
-    <meta property="og:image" content="http://www.mathildeporee.fr/images/volatile.jpg">
+    <meta property="og:url" content="https://www.mathildeporee.fr/">
+    <meta property="og:image" content="https://www.mathildeporee.fr/images/volatile.jpg">
     <meta property="og:site_name" content="Mathilde Por&#xe9;e">
     <title>Mathilde Porée &mdash; Installation</title>
     <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" />
@@ -43,10 +43,6 @@
 
   <div class="item p2">
     <a class="gallery" title="Vue d'exposition, Mauvaises Graines, Le45TER" href="/images/installation/variations-expo.jpg"><img alt="variations-expo" src="/images/installation/variations-expo_thumb.jpg" /></a>
-  </div>
-
-  <div class="item p2">
-    <a class="gallery" title="Vue d'exposition, Nêtre, Plateforme" href="/images/installation/installation06.jpg"><img alt="installation06" src="/images/installation/installation06_thumb.jpg" /></a>
   </div>
 
   <div class="item p2">
