--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <div class="container min360">
       <div id="index" class="center-block">
-        <img title="Volatile II, 2014, encre de chine, 42x59cm" alt="Volatile II, 2014" src="/images/index.jpg" />
+        <img title="Vulpes, vulpes, 2013, graphite et encre de chine, 100x100cm" alt="Vulpes, vulpes, 2013" src="/images/vulpes-vulpes.jpg" />
       </div>
     </div>
   </body>
