--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <div class="container min360">
       <div id="index" class="center-block">
-        <img title="Vulpes, vulpes, 2013, graphite et encre de chine, 100x100cm" alt="Vulpes, vulpes, 2013" src="/images/vulpes-vulpes.jpg" />
+        <img title="Peau de chagrin, Geai, 2012, encre de chine" alt="Peau de chagrin, Geai, 2012" src="/images/peau-de-chagrin.jpg" />
       </div>
     </div>
   </body>
